--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title></title>
+	<title>The Shape Up!</title>
+	<link rel="shape_up_logo.png" href="images/favicon.ico">
 </head>
 
 <body>
