--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8" >
 	<title>The Shape Up!</title>
-	<link rel="shape_up_logo.png" href="images/favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 </head>
 
 <body>
