--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<main>
-		<img src="shape_up_logo.png" alt="Shape up logo" height="75">
+		<img src="shape_up_logo.webp" alt="Shape up logo" height="75">
 		<h1>Shape Up</h1>
 		<h2>Find the best fit for you</h2>
 		<h1>Get ready to shape Up!</h1>
