--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<main>
-		<img src="shape_up_logo.webp" alt="Shape up logo" height="75">
+		<img src="shape_up_logo.png" alt="Shape up logo" height="75">
 		<h1>Shape Up</h1>
 		<h2>Find the best fit for you</h2>
 		<h1>Get ready to shape Up!</h1>
@@ -17,13 +17,13 @@
 		<p>As fitness expert Amanda Russel said"</p>
 		<blockquote>Fitness is about so much more than exercise. It's a catalyst for positive change, and it affects every aspect of your life.</blockquote>
 		<h1>What we offer</h1>
-		<a href="index.html">Build strong muscles</a>
+		<h1><a href="index.html">Build strong muscles</a></h1>
 		<p>Tired of being tired? Strength training can help you manage or lose weight and increase your metabolism to help you burn more calories. It can also increase bone density and reduce the risk of osteoporosis</p>
-		<a href="index.html">Get your heart rate up</a>
+		<h1><a href="index.html">Get your heart rate up</a></h1>
 		<p>Want to lose wight? Cardiovascular exercise burns calories and improves overall health. It can reduce belly fat, promote brain growth, prevent stress, and help you focus.</p>
-		<a href="index.html">Relax</a>
+		<h1><a href="index.html">Relax</a></h1>
 		<p>Stressed out? Stress can weaken the immune system and cause high blood pressure, fatigue, depression, anxiety, and even heart disease. Learn ways to manage and reduce stress.</p>
-		<a href="index.html">Eat what's right for you</a>
+		<h1><a href="index.html">Eat what's right for you</a></h1>
 		<p>Are you really what you eat? Lose weight, gain weight, or just feel great! Maintaining a healthy diet is probably the most important thing you can do to promote overall health.</p>
 		<h1>Additional resources</h1>
 		<ul>
