--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<main>
 		<header>
-			<img src="shape_up_logo.png" alt="Shape up logo" height="75">
+			<img src="images/shape_up_logo.png" alt="Shape up logo" height="75">
 		<h1>Shape Up</h1>
 			<h2>Find the best fit for you</h2>
 		</header>
