--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</header>
 		<h1>Get ready to shape Up!</h1>
 		<p>How many times have you started a new workout routine or diet? And how many times has it failed to give you the results you want? Now, with the help of this site, you can learn about the exercises and diet that would work best for you. We offer personalized programs as well as acess to several health and dieting tools. So don't wait! Get started looking and feeling better today.</p>
-		<p>As fitness expert Amanda Russel said"</p>
+		<p>As fitness expert Amanda Russel said</p>
 		<blockquote>Fitness is about so much more than exercise. It's a catalyst for positive change, and it affects every aspect of your life.</blockquote>
 		<h2>What we offer</h2>
 		<h3><a href="index.html">Build strong muscles</a></h3>
@@ -29,8 +29,15 @@
 		<p>Are you really what you eat? Lose weight, gain weight, or just feel great! Maintaining a healthy diet is probably the most important thing you can do to promote overall health.</p>
 		<h3>Additional resources</h3>
 		<ul>
-			<li><a href="></a></li>
+			<li><a href="index.html">Physical activity and health</a></li>
+			<li><a href="index.html">Stretching exercises</a></li>
+			<li><a href="strength_training.txt">Strength training</a></li>
+			<li><a href="index.html">Cardiovascular training</a></li>
+			<li><a href="index.html">Yoga workout</a></li>
 		</ul>
 	</main>
+	<footer>
+		<p> c 2022 Shape Up!</p>
+	</footer>
 </body>
 </html>
