--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<ul>
 			<li><a href="index.html">Physical activity and health</a></li>
 			<li><a href="index.html">Stretching exercises</a></li>
-			<li><a href="strength_training.txt">Strength training</a></li>
+			<li><a href="index.html">Strength training</a></li>
 			<li><a href="index.html">Cardiovascular training</a></li>
 			<li><a href="index.html">Yoga workout</a></li>
 		</ul>
