--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 	<main>
+		<section>
 		<header>
 			<img src="images/shape_up_logo.png" alt="Shape up logo" height="75">
 		<h1>Shape Up</h1>
@@ -35,6 +36,7 @@
 			<li><a href="index.html">Cardiovascular training</a></li>
 			<li><a href="index.html">Yoga workout</a></li>
 		</ul>
+		</section>
 	</main>
 	<footer>
 		<p> &copy; 2022 Shape Up!</p>
