--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" >
 	<title>The Shape Up!</title>
-	<link rel="shape_up_logo.webq" href="images/favicon.ico">
+	<link rel="shortcut icon" href="images/shape_up_logo.png">
 </head>
 
 <body>
