--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" >
 	<title>The Shape Up!</title>
 	<link rel="shortcut icon" href="images/shape_up_logo.png">
+	<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
