--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<p>As fitness expert Amanda Russel said</p>
 		<blockquote>Fitness is about so much more than exercise. It's a catalyst for positive change, and it affects every aspect of your life.</blockquote>
 		<h2>What we offer</h2>
-		<h3><a href="index.html">Build strong muscles</a></h3>
+		<h3><p class="link"><a href="index.html">Build strong muscles</a></p></h3>
 		<p>Tired of being tired? Strength training can help you manage or lose weight and increase your metabolism to help you burn more calories. It can also increase bone density and reduce the risk of osteoporosis</p>
 		<h3><a href="index.html">Get your heart rate up</a></h3>
 		<p>Want to lose wight? Cardiovascular exercise burns calories and improves overall health. It can reduce belly fat, promote brain growth, prevent stress, and help you focus.</p>
